tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-multiline.stderr
TOML parse error at line 1, column 20
  |
1 | multi = "first line
  |                    ^
invalid basic string
